--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db:migrate": "drizzle-kit generate:pg",
+    "db:push": "drizzle-kit up:pg",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -11,22 +13,28 @@
     "prettier:check": "prettier --check --ignore-unknown ."
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.0.0-beta.3",
     "@formkit/auto-animate": "^0.7.0",
+    "@paralleldrive/cuid2": "^2.2.1",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.27.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.19.5",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "lint-staged": "^13.2.3",
