--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.2.6",
     "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.27.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
@@ -31,9 +32,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/uuid": "^9.0.2",
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.19.5",
     "eslint-config-prettier": "^8.8.0",
