--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.2.6",
     "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.27.2",
     "eslint": "8.44.0",
@@ -31,6 +32,7 @@
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "uuid": "^9.0.0",
