--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.10",
     "drizzle-orm": "^0.27.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
